Source refactorization. Source must generate multiple binary packages (update-hosts, update-hosts-arithmetic-client, ...

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,8 +1,11 @@
 No extra dependencies required. 
 The included scripts use /bin/sh , ip, sed, grep, cut, bc and some sh builtins
 
-1. copy (or link) ./bin/update-hosts to a directory included in $PATH
-2. copy  (or link) share/arithmetic-server.sh to /usr/lib/networkd-dispatcher/routable.d or /etc/networkd-dispatcher/routable.d/
+1. copy (or link) file ./bin/update-hosts to a directory included in $PATH
+2. copy  (or link) directory ./common/usr/share/update-hosts to /usr/share
+3. copy  (or link) ./client/arithmetic-server.sh to /usr/lib/networkd-dispatcher/routable.d (or /etc/networkd-dispatcher/routable.d/)
    arithmetic-server.sh  file permissions must be 0755 and must be owned by root user and group (uid=0, gid=0)
+
+
 
 
