--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -3,8 +3,12 @@ The included scripts use /bin/sh , ip, sed, grep, cut, bc and some sh builtins
 
 1. copy (or link) file ./bin/update-hosts to a directory included in $PATH
 2. copy  (or link) directory ./common/usr/share/update-hosts to /usr/share
-3. copy  (or link) ./client/arithmetic-server.sh to /usr/lib/networkd-dispatcher/routable.d (or /etc/networkd-dispatcher/routable.d/)
-   arithmetic-server.sh  file permissions must be 0755 and must be owned by root user and group (uid=0, gid=0)
+3. For arithmetic client
+	copy  (or link) ./client/arithmetic-client.sh to /usr/lib/networkd-dispatcher/routable.d (or /etc/networkd-dispatcher/routable.d/)
+   	arithmetic-client.sh  file permissions must be 0755 and must be owned by root user and group (uid=0, gid=0)
+4. For arithmetic server
+	copy  (or link) ./server/arithmetic-server.sh to /usr/lib/networkd-dispatcher/routable.d (or /etc/networkd-dispatcher/routable.d/)
+   	arithmetic-server.sh  file permissions must be 0755 and must be owned by root user and group (uid=0, gid=0)
 
 
 
