--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-hosts (0.3) unstable; urgency=medium
+
+  * Added missing function die().
+
+ -- Luis Garcia Gisbert <luisgg@gmail.com>  Fri, 18 Oct 2024 08:24:57 +0200
+
 update-hosts (0.2) unstable; urgency=medium
 
   * Fixed comments in /etc/hosts
